
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#2624] Improved Users grid to allow batch editing from right-click context menu
- [#2609] Remove filter commands and modifiers from scriptProperties passed to modElement/modTag instances
- [#2500] Improved CSS on welcome page for Fx users
- [#2532] Improved Resource tree icons to better shown when a Resource has children as opposed to when it is marked as a container
- [#2602] Improved language on Users access permissions grid to clarify action
- [#2614] Expand comment field on modUserProfile to handle more than 255 characters
- [#2613] Ensured User Groups in mgr are sorted alphanumerically
- [#2599] Fixed issue where Add Element to Property Set window form values were not cleared on second loading
- [#2596] Fixed issue where User Groups could not be removed
- [#2542] Fixed hardcoded language lexicon load reference in policy/get processor
- [#2573] Fixed issue with backslash in TV output render property values
- [#2594] Fixed issue where special characters were being stripped from phone numbers in user profile
- Fixed issue with file tree that prevented image thumbnails from showing
- [#2525] Fixed filemanager_path issues by added filemanager_path_relative setting, and then calculating from that
- [#2589] Fixed issue with port 80 feeds in magpie RSS feed parser
- [#2544] Fixed issue with updatefromgrid processor with User Settings
- [#2560] Fixed issue with resourcelist TV not persisting set value
- [#2586] Add rank field to FC rules allowing organizing of order of execution
- Update core schemas and regenerate maps for new xPDO index elements
- [#69] Allow Transport Vehicles to abort installation when validation fails
- Update xPDO version to 2.0.0-rc2 (official release)
- [#2552] Fix scope issues when passing nested arrays in Chunk properties
